# MultiClaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION.md  PLUGINS.md  README.md  SECURITY.md  install.sh  manage.py  tui.py
multi-claw-agent/: .env.example  Dockerfile  crons.json  pyproject.toml
multi-claw-agent/plugins/browser_control/: engine.py  installer.py  main.py  plugin.json  tools.py
multi-claw-agent/plugins/docker/: main.py  plugin.json
multi-claw-agent/plugins/hello-plugin/: main.py  plugin.json
multi-claw-agent/plugins/portainer/: main.py  plugin.json
multi-claw-agent/plugins/tailscale/: discovery.py  main.py  plugin.json
multi-claw-agent/skills/Docker Essentials/: skill.json
multi-claw-agent/skills/docker-compose/: skill.json
multi-claw-agent/skills/greeter/: main.py  skill.json
multi-claw-agent/skills/test-skill/: skill.json
multi-claw-agent/src/: auth.py  config.py  main.py  memory.py  models.py  run.py  system_info.py
multi-claw-agent/src/agent/: core.py  state.py  task_runner.py  tool_executor.py
multi-claw-agent/src/api/: config_endpoint.py  crons.py  git_plugins.py  health.py  logs.py  plugins.py  self_update.py  skills.py  stream.py  tailscale.py  tasks.py
multi-claw-agent/src/crons/: executor.py  manager.py
multi-claw-agent/src/plugins/: loader.py  (+4 more)
multi-claw-agent/tests/: conftest.py  test_agent_core.py  test_auth.py  test_config_endpoint.py  test_crons.py  test_git_plugins.py  test_health.py  test_memory.py  test_memory_sharing.py  test_plugins.py  test_providers.py  test_skills.py  test_system_info.py  test_tasks.py
(+194 files in other folders)
